# wassio

./: CMakeLists.txt  Makefile  README.md
include/wassio/: awaitable_coro.hpp  context.hpp  coro.hpp  entry_coro.hpp
include/wassio/context/: context.hpp
include/wassio/context/executors/: immediate_executor.hpp
include/wassio/context/schedulers/: scheduler.hpp  single_threaded.hpp
include/wassio/core/: awaitable.hpp  coroutine.hpp  exception.hpp  heap_allocator.hpp  promise.hpp  promise_result.hpp  promise_storage.hpp  suspend.hpp  transform_awaiter.hpp
include/wassio/coro/: awaitable.hpp  coroutine.hpp  exception.hpp  heap_allocator.hpp  promise.hpp  promise_result.hpp  promise_storage.hpp  suspend.hpp  transform_awaiter.hpp
tests/: CMakeLists.txt  test_core.cpp
